projects/maison/src/apps/paperless-ngx/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    clusterexternalsecret.eso.io/name: cnpg-s3-credentials
  name: paperless-ngx
