projects/maison/src/apps/paperless-ngx/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  parentRefs:
    - name: default
      namespace: default
  hostnames:
    - paperless-ngx.chezmoi.sh
  rules:
    - backendRefs:
        - name: paperless-ngx
          port: 80
