projects/maison/src/apps/paperless-ngx/vpn.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  defaultBackend:
    service:
      name: paperless-ngx
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - paperless-ngx
